--- a/no-socials.html
+++ b/no-socials.html
@@ -30,6 +30,7 @@
             <a href="/">Home</a>
             <a href="/about">About Us</a>
             <a href="/#find-community">Find Community</a>
+            <a href="/contribute">Contribute</a>
         </div>
     </header>
 
