--- a/no-telegram.html
+++ b/no-telegram.html
@@ -14,12 +14,14 @@
       <div class="nav-links">
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
+        <a href="contribute.html">Contribute</a>
       </div>
       <button id="mobile-menu-btn" class="mobile-menu-btn"><i class="fas fa-bars"></i></button>
     </nav>
     <div id="mobile-menu" class="mobile-menu hidden">
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
+      <a href="contribute.html">Contribute</a>
     </div>
   </header>
 
