--- a/group.html
+++ b/group.html
@@ -20,6 +20,7 @@
                 <a href="/">Home</a>
                 <a href="/about">About Us</a>
                 <a href="/#find-community">Find Community</a>
+                <a href="/contribute">Contribute</a>
             </div>
             <button id="mobile-menu-btn" class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
