--- a/contribute.html
+++ b/contribute.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
-    <!-- Navigation Header -->
+<!-- Navigation Header -->
     <header class="header">
         <nav class="navbar">
             <div class="nav-container">
@@ -20,7 +20,7 @@
                 <div class="nav-links">
                     <a href="/" class="nav-link">Home</a>
                     <a href="/about" class="nav-link">About Us</a>
-                    <a href="/#find-community" class="nav-link">Find Community</a>
+                    <a href="#find-community" class="nav-link">Find Community</a>
                     <a href="/contribute" class="nav-link">Contribute</a>
                 </div>
                 <div class="mobile-menu-toggle" id="mobile-menu-btn">
@@ -30,6 +30,12 @@
                 </div>
             </div>
         </nav>
+        <!-- Mobile Menu -->
+        <div id="mobile-menu" class="mobile-menu hidden">
+            <a href="/">Home</a>
+            <a href="/about">About Us</a>
+            <a href="#find-community">Find Community</a>
+        </div>
     </header>
 
     <body>
