--- a/group.html
+++ b/group.html
@@ -69,40 +69,45 @@
                     <p id="group-description">Loading group information...</p>
                 </div>
 
-                <!-- What to Expect Section -->
-                <div class="expect-section">
-                    <h2><i class="fas fa-sparkles"></i> What to Expect</h2>
-                    <div class="expect-grid">
-                        <div class="expect-card">
-                            <div class="expect-icon">
-                                <i class="fas fa-users"></i>
-                            </div>
-                            <h3>Community Events</h3>
-                            <p>Meet fellow furs and attend local meetups and events</p>
+                            <!-- What to Expect Section -->
+            <div id="expectations-container" class="expect-section">
+                <h2><i class="fas fa-sparkles"></i> What to Expect</h2>
+                <div class="expect-grid">
+                    
+                    <div class="expect-card" id="expect-events">
+                        <div class="expect-icon">
+                            <i class="fas fa-users"></i>
                         </div>
-                        <div class="expect-card">
-                            <div class="expect-icon">
-                                <i class="fas fa-comments"></i>
-                            </div>
-                            <h3>Active Chats</h3>
-                            <p>Daily conversations and sharing on Telegram</p>
+                        <h3>Community Events</h3>
+                        <p>Meet fellow furs and attend local meetups and events</p>
+                    </div>
+
+                    <div class="expect-card" id="expect-chats">
+                        <div class="expect-icon">
+                            <i class="fas fa-comments"></i>
                         </div>
-                        <div class="expect-card">
-                            <div class="expect-icon">
-                                <i class="fas fa-palette"></i>
-                            </div>
-                            <h3>Art Sharing</h3>
-                            <p>Share your art, fursuit, and creative works</p>
+                        <h3>Active Chats</h3>
+                        <p>Daily conversations and sharing on Telegram</p>
+                    </div>
+
+                    <div class="expect-card" id="expect-art">
+                        <div class="expect-icon">
+                            <i class="fas fa-palette"></i>
                         </div>
-                        <div class="expect-card">
-                            <div class="expect-icon">
-                                <i class="fas fa-handshake"></i>
-                            </div>
-                            <h3>Friendly Community</h3>
-                            <p>Everyone is welcome, judgment-free environment</p>
+                        <h3>Art Sharing</h3>
+                        <p>Share your art, fursuit, and creative works</p>
+                    </div>
+
+                    <div class="expect-card" id="expect-community">
+                        <div class="expect-icon">
+                            <i class="fas fa-handshake"></i>
                         </div>
+                        <h3>Friendly Community</h3>
+                        <p>Everyone is welcome, judgment-free environment</p>
                     </div>
                 </div>
+            </div>
+
 
                 <!-- Guidelines Section -->
                 <div class="guidelines-section">
@@ -261,6 +266,37 @@
                 statusEl.textContent = 'Inactive';
                 statusEl.style.color = '#ef4444'; // red
             }
+
+            //  DYNAMIC EXPECTATIONS SECTION 
+                const expectContainer = document.getElementById('expectations-container');
+
+                // No expectations defined OR group inactive → hide entire section
+                if (!group.expectations || !group.active) {
+                    expectContainer.style.display = 'none';
+                } else {
+                    // Show/Hide individual cards based on boolean flags
+                    const expectations = group.expectations;
+
+                    const map = {
+                        events: document.getElementById('expect-events'),
+                        chats: document.getElementById('expect-chats'),
+                        art: document.getElementById('expect-art'),
+                        community: document.getElementById('expect-community')
+                    };
+
+                    Object.keys(map).forEach(key => {
+                        if (expectations[key] === false) {
+                            map[key].style.display = 'none';
+                        }
+                    });
+
+                    // If ALL are hidden → hide entire container
+                    const visibleCards = Object.values(map).some(card => card.style.display !== 'none');
+                    if (!visibleCards) {
+                        expectContainer.style.display = 'none';
+                    }
+                }
+
 
             
             // Set join link — if missing, go to no-socials page so users can report the missing link
