Conventions\Events Page
E

--- a/group.html
+++ b/group.html
@@ -20,6 +20,7 @@
                 <a href="/">Home</a>
                 <a href="/about">About Us</a>
                 <a href="/#find-community">Find Community</a>
+                <a href="/events.html#find-events">Find Cons\Events</a>
                 <a href="/contribute">Contribute</a>
             </div>
             <button id="mobile-menu-btn" class="mobile-menu-btn">
@@ -31,6 +32,7 @@
             <a href="/">Home</a>
             <a href="/about">About Us</a>
             <a href="/#find-community">Find Community</a>
+            <a href="#find-events" clas="nav-link">Find Cons\Events</a>
             <a href="/contribute">Contribute</a>
         </div>
     </header>
@@ -358,7 +360,8 @@
                 { key: 'instagram', icon: 'fab fa-instagram', label: 'Instagram' },
                 { key: 'facebook', icon: 'fab fa-facebook', label: 'Facebook' },
                 { key: 'reddit', icon: 'fab fa-reddit', label: 'Reddit' },
-                { key: 'youtube', icon: 'fab fa-youtube', label: 'YouTube' }
+                { key: 'youtube', icon: 'fab fa-youtube', label: 'YouTube' },
+                { key: 'bluesky', icon: 'fas fa-cloud', label: 'Bluesky' }
             ];
             
             let hasSocials = false;
