--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <a href="/" class="nav-link">Home</a>
                     <a href="/about" class="nav-link">About Us</a>
                     <a href="#find-community" class="nav-link">Find Community</a>
+                    <a href="/events.html#find-events" class="nav-link">Find Cons\Events</a>
                     <a href="/contribute" class="nav-link">Contribute</a>
                 </div>
                 <div class="mobile-menu-toggle" id="mobile-menu-btn">
@@ -136,6 +137,7 @@
 
 
     <script src="js/data.js"></script>
+    <script src="js/events-data.js"></script>
     <script src="script.js"></script>
     <script src="js/main.js"></script>
 </body>
