--- a/contribute.html
+++ b/contribute.html
@@ -21,6 +21,7 @@
                     <a href="/" class="nav-link">Home</a>
                     <a href="/about" class="nav-link">About Us</a>
                     <a href="#find-community" class="nav-link">Find Community</a>
+                    <a href="/events.html#find-events" class="nav-link">Find Cons/Events</a>
                     <a href="/contribute" class="nav-link">Contribute</a>
                 </div>
                 <div class="mobile-menu-toggle" id="mobile-menu-btn">
@@ -35,6 +36,8 @@
             <a href="/">Home</a>
             <a href="/about">About Us</a>
             <a href="#find-community">Find Community</a>
+            <a href="/events.html#find-events">Find Cons/Events</a>
+            <a href="/contribute">Contribute</a>
         </div>
     </header>
 
