--- a/about.html
+++ b/about.html
@@ -21,6 +21,8 @@
                     <a href="/" class="nav-link">Home</a>
                     <a href="/about" class="nav-link">About Us</a>
                     <a href="/#find-community" class="nav-link">Find Community</a>
+                    <a href="/events.html#find-events" class="nav-link">Find Cons\Events</a>
+                    <a href="/contribute" class="nav-link">Contribute</a>
                 </div>
                 <div class="mobile-menu-toggle" id="mobile-menu-btn">
                     <span></span>
@@ -29,6 +31,13 @@
                 </div>
             </div>
         </nav>
+        <div id="mobile-menu" class="mobile-menu hidden">
+            <a href="/">Home</a>
+            <a href="/about">About Us</a>
+            <a href="/#find-community">Find Community</a>
+            <a href="/events.html#find-events">Find Cons\Events</a>
+            <a href="/contribute">Contribute</a>
+        </div>
     </header>
 
     <main>
