--- a/event.html
+++ b/event.html
@@ -18,7 +18,8 @@
             <div class="nav-links">
                 <a href="/">Home</a>
                 <a href="/about">About Us</a>
-                <a href="/events.html#find-events">Find Events</a>
+                <a href="/#find-community">Find Community</a>
+                <a href="/events.html#find-events">Find Cons\Events</a>
                 <a href="/contribute">Contribute</a>
             </div>
             <button id="mobile-menu-btn" class="mobile-menu-btn">
@@ -28,7 +29,8 @@
         <div id="mobile-menu" class="mobile-menu hidden">
             <a href="/">Home</a>
             <a href="/about">About Us</a>
-            <a href="/events.html#find-events">Find Events</a>
+            <a href="/#find-community">Find Community</a>
+            <a href="/events.html#find-events">Find Cons\Events</a>
             <a href="/contribute">Contribute</a>
         </div>
     </header>
