--- a/events.html
+++ b/events.html
@@ -24,7 +24,7 @@
                     <a href="/" class="nav-link">Home</a>
                     <a href="/about" class="nav-link">About Us</a>
                     <a href="/index.html" class="nav-link">Find Community</a>
-                    <a href="#find-events" clas="nav-link">Find Cons\Events</a>
+                    <a href="#find-events" class="nav-link">Find Cons\Events</a>
                     <a href="/contribute" class="nav-link">Contribute</a>
                 </div>
                 <div class="mobile-menu-toggle" id="mobile-menu-btn">
@@ -38,8 +38,9 @@
         <div id="mobile-menu" class="mobile-menu hidden">
             <a href="/">Home</a>
             <a href="/about">About Us</a>
-            <a href="#find-community">Find Community</a>
-            <a href="#find-events">Find Events</a>
+            <a href="/index.html#find-community">Find Community</a>
+            <a href="#find-events">Find Cons\Events</a>
+            <a href="/contribute">Contribute</a>
         </div>
     </header>
 
