--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <a href="/">Home</a>
             <a href="/about">About Us</a>
             <a href="#find-community">Find Community</a>
+            <a href="/events.html#find-events">Find Cons\Events</a>
+            <a href="/contribute">Contribute</a>
         </div>
     </header>
 
