--- a/contribute.html
+++ b/contribute.html
@@ -72,6 +72,8 @@
                 </p>
                 <p style="color: #6b7280; margin-bottom: 2rem;">
                     Reach out to us at <a href="mailto:crash@hyena-industries.com">crash@hyena-industries.com</a>.
+                </p>
+            </div>
         </section>
     </body>
 
@@ -92,10 +94,10 @@
                 <div class="footer-section">
                     <h3>Community</h3>
                     <p>For community inquiries and suggestions, contact local group admins through their Telegram groups.</p>
+                </div>
                 <div class="footer-section">
                     <h3>Made By</h3>
                     <p>Built with <i class="fas fa-code" style="color: #a855f7;"></i> by <a href="https://hyena-industries.com/" style="color: #a855f7; text-decoration: none; font-weight: 600;">Hyena Industries</a></p>
-                </div>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -103,3 +105,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
