--- a/contribute.html
+++ b/contribute.html
@@ -44,13 +44,10 @@
     <body>
         <!-- Contact Section -->
         <section class="about">
-            <div class="container" style="text-align: center; max-width: 600px; padding-top: 15px; margin-top: 1.rem;">
-                <h2 class="section-title">Get Involved</h2>
+            <div class="container" style="text-align: center; max-width: 600px; padding-top: 15px; margin-top: 2.rem;">
+                <h2 class="section-title" style="padding-top: 3rem;">Keep up to date in telegram channel!</h2>
                 <p style="color: #6b7280; margin-bottom: 1.5rem;">
-                    Want to add your community to the UK Furry Community Hub? Have suggestions for improvements? We'd love to hear from you!
-                </p>
-                <p style="color: #6b7280; margin-bottom: 2rem;">
-                    Contact us through any regional administrators with your feedback.
+                    Join our official Telegram channel to receive updates about new communities, events, and site features: <a href="t.me/ukfurrycommunity" target="_blank" rel="noopener noreferrer">t.me/ukfurrycommunity</a>
                 </p>
                 <!-- Side project notice: community help requested -->
                 <section class="about-help" style="background: #faf5ff; border: 1px solid #f3e8ff; padding: 1rem; border-radius: 8px; margin-bottom: 1.25rem;">
